1998-09-13  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c (check_fileproc): Don't allow commits in Emptydir.
	* sanity.sh (emptydir-8): Test for this change in behavior.

	* sanity.sh: Add some compatibility tests to TODO comments at end.

1998-09-10  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* wrapper.c (wrap_add): Remove obsolete comment about -m.

	* server.c (server_updated): Check for error from CVS_UNLINK.

1998-09-09  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (serve_root): Allocate with malloc, not xmalloc.

	* root.c (set_local_cvsroot): Move memory allocation from here...
	* server.c (serve_root): ...to here.  Fixes error handling.

	* root.c (parse_cvsroot): Don't call check_root_consistent;
	parse_cvsroot is only used for local and client.
	* root.c (set_local_cvsroot): Move check_root_consistent
	functionality from here...
	* server.c (serve_root): ...to here.  Fixes error handling.  Also
	made the error more explicit, while I am at it.
	* server.c (Pserver_Repos): Now static.
	* cvs.h: Don't declare it.
	* root.c (check_root_consistent): Removed; no longer needed.
	* sanity.sh (pserver): New test, tests for this behavior and some
	other basic pserver stuff.

	* update.c (merge_file): Use cvs_output for "already contains the
	differences" message.  Found this one when I actually observed the
	out-of-order bug in Real Life(TM).

1998-09-09  Jim Kingdon

	* find_names.c (find_dirs): Make sure to zero errno before
	going around the loop again.
	* find_names.c (find_rcs): Make sure to set save_errno.
	(thanks to Alexandre Parenteau for reporting both problems).

1998-09-09  Jim Kingdon  <kingdon@harvey.cyclic.com> and Michael Pakovic

	* edit.c (notify_do): Only free line if it is not NULL.

1998-09-07  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* cvs.h: dirs_sent_to_server should not be inside
	AUTH_SERVER_SUPPORT (reported by both Richard Levitte and Murray
	Bishop, thanks).

	* lock.c, cvs.h: New variable lock_dir.